--- a/training/frontend/Dashboard.css
+++ b/training/frontend/Dashboard.css
@@ -58,10 +58,10 @@ button:hover {
   background-color: rgb(255, 255, 255);
 }
 
-.table {
+.table,
+.books {
   margin-top: 100px;
   margin-left: 300px;
-  /* border: 2px solid black; */
   border-radius: 10px;
   width: 70%;
   background-color: bisque;
